--- a/index.html
+++ b/index.html
@@ -2,174 +2,198 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8" />
-<title>PXN CB1 Keymap Editor</title>
+<title>PXN / Custom Keymap Editor</title>
 
 <style>
 body{
-    background:#111;
     font-family:Segoe UI;
-    color:white;
+    background:#111;
+    color:#fff;
     text-align:center;
 }
 
-/* ================= キーボード ================= */
+/* ===== 画像 + レイアウト ===== */
 
-.keyboard-container{
+#stage{
     position:relative;
-    margin:auto;
-    width:420px;
-    height:760px;
-    background:url("pxn_cb1.png") no-repeat center;
-    background-size:contain;
+    display:inline-block;
+    border:2px solid #333;
+    margin-top:15px;
+}
+
+#bg{
+    display:block;
+    max-width:700px;
 }
 
 .key{
     position:absolute;
     background:rgba(0,0,0,.55);
-    border:2px solid #444;
-    border-radius:10px;
+    border:2px solid #555;
+    border-radius:8px;
+    font-size:12px;
     display:flex;
     align-items:center;
     justify-content:center;
     cursor:pointer;
-    font-size:12px;
-    transition:.1s;
-}
-
-.key:hover{
-    border-color:#00d4ff;
+    user-select:none;
 }
 
 .key.selected{
     border-color:#00ff88;
-    box-shadow:0 0 10px #00ff88;
+    box-shadow:0 0 8px #00ff88;
 }
-
-/* ================= UI ================= */
 
 .panel{
-    margin:15px auto;
+    margin:8px;
 }
 
-input{
-    padding:6px;
-    width:200px;
-}
-
-button{
-    padding:6px 12px;
-    margin:4px;
-}
+input{padding:6px;}
+button{padding:6px 10px;margin:3px;}
 </style>
 </head>
 
 <body>
 
-<h2>🎮 PXN CB1 Keymap Editor</h2>
+<h2>🎮 Universal Keymap Layout Editor</h2>
 
 <div class="panel">
-    レイヤー:
-    <button onclick="prevLayer()">◀</button>
-    <span id="layerLabel">0</span>
-    <button onclick="nextLayer()">▶</button>
-</div>
-
-<div class="keyboard-container" id="keyboard"></div>
-
-<div class="panel">
-    キーコード:
-    <input id="keyInput" oninput="updateKey(this.value)">
+画像:
+<input type="file" accept="image/*" onchange="loadImage(event)">
 </div>
 
 <div class="panel">
-    <button onclick="downloadKeymap()">keymap.c ダウンロード</button>
-    <button onclick="saveLocal()">保存</button>
-    <button onclick="loadLocal()">読込</button>
+<button onclick="addKey()">＋キー追加</button>
+<button onclick="save()">保存</button>
+<button onclick="load()">読込</button>
+<button onclick="exportKeymap()">keymap.c出力</button>
 </div>
+
+<div class="panel">
+キーコード:
+<input id="keyInput" oninput="updateKey(this.value)">
+</div>
+
+<div id="stage">
+<img id="bg">
+</div>
+
+<p>
+操作:<br>
+クリック=選択 / ドラッグ=移動 / 矢印=微調整 / Shift+矢印=10px<br>
+WASD=サイズ変更 / Delete=削除
+</p>
 
 <script>
 
-/* ==========================
-   🔴 CB1 キー配置（px単位）
-   必要に応じて微調整してください
-========================== */
+/* =========================
+   STATE
+========================= */
 
-const layout = [
-
-/* 上段ノブ */
-{id:0,x:55,y:35,w:60,h:60},
-{id:1,x:155,y:35,w:60,h:60},
-{id:2,x:255,y:35,w:110,h:60},
-
-/* ボタン群 */
-{id:3,x:45,y:135,w:80,h:70},
-{id:4,x:135,y:135,w:80,h:70},
-{id:5,x:45,y:215,w:80,h:70},
-{id:6,x:135,y:215,w:80,h:70},
-{id:7,x:45,y:295,w:80,h:70},
-{id:8,x:135,y:295,w:80,h:70},
-{id:9,x:45,y:375,w:80,h:70},
-{id:10,x:135,y:375,w:80,h:70},
-
-/* 中央ロゴ */
-{id:11,x:235,y:180,w:150,h:120},
-
-/* 下ノブ */
-{id:12,x:270,y:360,w:90,h:90}
-];
-
-
-/* ==========================
-   状態
-========================== */
-
+let layout=[];
 let layers=[{}];
 let currentLayer=0;
+
 let selected=null;
+let dragging=false;
+let offsetX, offsetY;
 
-const keyboard=document.getElementById("keyboard");
+const stage=document.getElementById("stage");
+const bg=document.getElementById("bg");
 
 
-/* ==========================
-   描画
-========================== */
+/* =========================
+   画像読み込み
+========================= */
 
-function render(){
+function loadImage(e){
+    const file=e.target.files[0];
+    const reader=new FileReader();
 
-keyboard.innerHTML="";
-
-layout.forEach(k=>{
-
-    const el=document.createElement("div");
-    el.className="key";
-
-    el.style.left=k.x+"px";
-    el.style.top=k.y+"px";
-    el.style.width=k.w+"px";
-    el.style.height=k.h+"px";
-
-    el.textContent = layers[currentLayer][k.id] || "";
-
-    if(selected===k.id) el.classList.add("selected");
-
-    el.onclick=()=>{
-        selected=k.id;
-        document.getElementById("keyInput").value =
-            layers[currentLayer][k.id]||"";
-        render();
+    reader.onload=()=>{
+        bg.src=reader.result;
     };
 
-    keyboard.appendChild(el);
-});
-
-document.getElementById("layerLabel").textContent=currentLayer;
-
+    reader.readAsDataURL(file);
 }
 
 
-/* ==========================
-   キー更新
-========================== */
+/* =========================
+   キー生成
+========================= */
+
+function addKey(){
+    const id=Date.now();
+    layout.push({id,x:50,y:50,w:70,h:70});
+    render();
+}
+
+
+/* =========================
+   描画
+========================= */
+
+function render(){
+
+    document.querySelectorAll(".key").forEach(e=>e.remove());
+
+    layout.forEach(k=>{
+
+        const el=document.createElement("div");
+        el.className="key";
+
+        if(selected===k.id) el.classList.add("selected");
+
+        el.style.left=k.x+"px";
+        el.style.top=k.y+"px";
+        el.style.width=k.w+"px";
+        el.style.height=k.h+"px";
+
+        el.textContent=layers[currentLayer][k.id]||"";
+
+        /* クリック */
+        el.onclick=(ev)=>{
+            ev.stopPropagation();
+            selected=k.id;
+            document.getElementById("keyInput").value=
+                layers[currentLayer][k.id]||"";
+            render();
+        };
+
+        /* ドラッグ */
+        el.onmousedown=(ev)=>{
+            dragging=true;
+            offsetX=ev.offsetX;
+            offsetY=ev.offsetY;
+        };
+
+        stage.appendChild(el);
+    });
+}
+
+
+/* =========================
+   ドラッグ移動
+========================= */
+
+stage.onmousemove=(e)=>{
+    if(!dragging || selected==null) return;
+
+    const rect=stage.getBoundingClientRect();
+    const k=getSelected();
+
+    k.x=e.clientX-rect.left-offsetX;
+    k.y=e.clientY-rect.top-offsetY;
+
+    render();
+};
+
+stage.onmouseup=()=>dragging=false;
+
+
+/* =========================
+   キーコード
+========================= */
 
 function updateKey(v){
     if(selected==null)return;
@@ -178,57 +202,72 @@ function updateKey(v){
 }
 
 
-/* ==========================
-   レイヤー
-========================== */
+/* =========================
+   キーボード操作
+========================= */
 
-function nextLayer(){
-    currentLayer++;
-    if(!layers[currentLayer]) layers[currentLayer]={};
+document.addEventListener("keydown",e=>{
+    if(selected==null)return;
+
+    const step=e.shiftKey?10:1;
+    const k=getSelected();
+
+    switch(e.key){
+
+        case "ArrowUp":k.y-=step;break;
+        case "ArrowDown":k.y+=step;break;
+        case "ArrowLeft":k.x-=step;break;
+        case "ArrowRight":k.x+=step;break;
+
+        case "w":k.h-=step;break;
+        case "s":k.h+=step;break;
+        case "a":k.w-=step;break;
+        case "d":k.w+=step;break;
+
+        case "Delete":
+            layout=layout.filter(x=>x.id!==selected);
+            selected=null;
+            break;
+    }
+
     render();
+});
+
+
+function getSelected(){
+    return layout.find(k=>k.id===selected);
 }
 
-function prevLayer(){
-    currentLayer=Math.max(0,currentLayer-1);
-    render();
-}
 
-
-/* ==========================
+/* =========================
    保存/読込
-========================== */
+========================= */
 
-function saveLocal(){
-    localStorage.setItem("cb1map",JSON.stringify(layers));
+function save(){
+    localStorage.setItem("layout",JSON.stringify(layout));
+    localStorage.setItem("layers",JSON.stringify(layers));
     alert("保存しました");
 }
 
-function loadLocal(){
-    const d=localStorage.getItem("cb1map");
-    if(d){
-        layers=JSON.parse(d);
-        render();
-    }
+function load(){
+    layout=JSON.parse(localStorage.getItem("layout")||"[]");
+    layers=JSON.parse(localStorage.getItem("layers")||"[{}]");
+    render();
 }
 
 
-/* ==========================
-   keymap.c 出力
-========================== */
+/* =========================
+   keymap.c 生成
+========================= */
 
-function downloadKeymap(){
+function exportKeymap(){
 
-let txt="const uint16_t PROGMEM keymaps[][MATRIX_ROWS][MATRIX_COLS] = {\n";
+let txt="const uint16_t PROGMEM keymaps[][MATRIX_ROWS][MATRIX_COLS]={\n";
 
 layers.forEach((l,i)=>{
     txt+=`[${i}] = LAYOUT(\n`;
-
-    const arr=[];
-    layout.forEach(k=>{
-        arr.push(l[k.id]||"KC_NO");
-    });
-
-    txt+=arr.join(", ")+"\n),\n";
+    txt+=layout.map(k=>l[k.id]||"KC_NO").join(", ");
+    txt+="\n),\n";
 });
 
 txt+="};";
@@ -241,9 +280,7 @@ a.click();
 }
 
 
-/* ==========================
-   初期描画
-========================== */
+/* ========================= */
 
 render();
 
