--- a/index.html
+++ b/index.html
@@ -946,7 +946,7 @@
                 // GitHub Pages上では相対パスでアクセスを試みる
                 const pngFiles = [
                     'controller1.png',
-                    'controller2.png', 
+                    'pxn_cb1.png', 
                     'buttonbox.png',
                     'wheel.png'
                 ];
