--- a/index.html
+++ b/index.html
@@ -943,6 +943,7 @@
         // 同じ階層の.pngファイルを読み込む機能
         async function loadLocalPngImages() {
             try {
+                // 画像読み込み追記可能 
                 // GitHub Pages上では相対パスでアクセスを試みる
                 const pngFiles = [
                     'controller1.png',
