--- a/index.html
+++ b/index.html
@@ -949,7 +949,8 @@
                     'controller1.png',
                     'pxn_cb1.png', 
                     'buttonbox.png',
-                    'wheel.png'
+                    'wheel.png',
+                    'gtneo'
                 ];
                 
                 const imageSelect = document.getElementById('imageSelect');
