--- a/index.html
+++ b/index.html
@@ -950,7 +950,7 @@
                     'pxn_cb1.png', 
                     'buttonbox.png',
                     'wheel.png',
-                    'gtneo'
+                    'gtneo.png'
                 ];
                 
                 const imageSelect = document.getElementById('imageSelect');
