--- a/index.html
+++ b/index.html
@@ -1020,7 +1020,9 @@
                     'controller1.png',
                     'controller2.png', 
                     'buttonbox.png',
-                    'wheel.png'
+                    'wheel.png',
+                    'pxn_cb1.png',
+                    'gtneo.png'
                 ];
                 
                 const imageSelect = document.getElementById('imageSelect');
