--- a/index.html
+++ b/index.html
@@ -1031,7 +1031,7 @@
                     'buttonbox.png',
                     'wheel.png',
                     'gtneo.png',
-                    'pxn_cb1'
+                    'pxn_cb1.png'
                 ];
 
                 const imageSelect = document.getElementById('imageSelect');
