--- a/index.html
+++ b/index.html
@@ -985,6 +985,9 @@
         let dragBoxStartY = 0;
         let colorHistory = [];
         const MAX_COLORS = 12;
+        // ===== タッチ拡張 =====
+        let longPressTimer = null;
+        let startDistance = 0;
 
         // Gist設定
         let gistToken = localStorage.getItem('gist-token-racing') || '';
@@ -1258,6 +1261,15 @@
                 el.onclick = (e) => { e.stopPropagation(); selectBox(box.id); };
                 // ドラッグ開始
                 el.onpointerdown = (e) => {
+                    // ----- 長押しコピー -----
+longPressTimer = setTimeout(() => {
+    const newBox = JSON.parse(JSON.stringify(box));
+    newBox.id = nextBoxId++;
+    controlBoxes.push(newBox);
+    layers.forEach(l => { l.boxes[newBox.id] = l.boxes[box.id] || ''; });
+    selectBox(newBox.id);
+    renderControlBoxes();
+}, 400);
                     if (e.button !== 0) return; e.preventDefault();
                     // Ctrl押下でコピーモード
                     if (e.ctrlKey || e.metaKey) {
@@ -1280,6 +1292,25 @@
         }
 
         document.addEventListener('pointermove', (e) => {
+            // ----- ピンチリサイズ -----
+if (e.touches && e.touches.length === 2 && selectedBox !== null) {
+    const box = controlBoxes.find(b => b.id === selectedBox);
+    const dx = e.touches[0].clientX - e.touches[1].clientX;
+    const dy = e.touches[0].clientY - e.touches[1].clientY;
+    const dist = Math.hypot(dx, dy);
+
+    if (!startDistance) startDistance = dist;
+
+    const scale = dist / startDistance;
+
+    box.width *= scale;
+    box.height *= scale;
+
+    startDistance = dist;
+
+    renderControlBoxes();
+    return;
+}
             if (!isDragging || selectedBox === null) return;
             const box = controlBoxes.find(b => b.id === selectedBox);
             if (!box) return;
@@ -1290,7 +1321,11 @@
             renderControlBoxes();
         });
 
-        document.addEventListener('pointerup', () => { isDragging = false; isCopying = false; });
+        document.addEventListener('pointerup', () => {
+    isDragging = false;
+    isCopying = false;
+    clearTimeout(longPressTimer);
+});
 
         // キーボードナビゲーション
         document.addEventListener('keydown', (e) => {
