--- a/index.html
+++ b/index.html
@@ -1269,7 +1269,7 @@ longPressTimer = setTimeout(() => {
     layers.forEach(l => { l.boxes[newBox.id] = l.boxes[box.id] || ''; });
     selectBox(newBox.id);
     renderControlBoxes();
-}, 400);
+}1200);
                     if (e.button !== 0) return; e.preventDefault();
                     // Ctrl押下でコピーモード
                     if (e.ctrlKey || e.metaKey) {
@@ -1293,8 +1293,13 @@ longPressTimer = setTimeout(() => {
 
         document.addEventListener('pointermove', (e) => {
             // ----- ピンチリサイズ -----
-if (e.touches && e.touches.length === 2 && selectedBox !== null) {
+// ================== タッチ：ピンチリサイズ ==================
+document.addEventListener('touchmove', (e) => {
+    if (e.touches.length !== 2 || selectedBox === null) return;
+
     const box = controlBoxes.find(b => b.id === selectedBox);
+    if (!box) return;
+
     const dx = e.touches[0].clientX - e.touches[1].clientX;
     const dy = e.touches[0].clientY - e.touches[1].clientY;
     const dist = Math.hypot(dx, dy);
@@ -1309,8 +1314,7 @@ if (e.touches && e.touches.length === 2 && selectedBox !== null) {
     startDistance = dist;
 
     renderControlBoxes();
-    return;
-}
+}, { passive:false });
             if (!isDragging || selectedBox === null) return;
             const box = controlBoxes.find(b => b.id === selectedBox);
             if (!box) return;
@@ -1325,6 +1329,9 @@ if (e.touches && e.touches.length === 2 && selectedBox !== null) {
     isDragging = false;
     isCopying = false;
     clearTimeout(longPressTimer);
+});
+        document.addEventListener('touchend', () => {
+    startDistance = 0;
 });
 
         // キーボードナビゲーション
